--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -2677,4 +2677,7 @@
   <data name="Photo_Word" xml:space="preserve">
     <value>Photo</value>
   </data>
+  <data name="Waiting_on_Robust" xml:space="preserve">
+    <value>Waiting on Robust to start</value>
+  </data>
 </root>
