--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -2680,4 +2680,25 @@
   <data name="Waiting_on_Robust" xml:space="preserve">
     <value>Waiting on Robust to start</value>
   </data>
+  <data name="DosBoxRunning" xml:space="preserve">
+    <value>A DOS Box named Robust is already running</value>
+  </data>
+  <data name="Name_of_Region_Word" xml:space="preserve">
+    <value>Name of Region</value>
+  </data>
+  <data name="Robust_not_Running" xml:space="preserve">
+    <value>Robust is not running on this machine</value>
+  </data>
+  <data name="Running_as_a_Region_Server_word" xml:space="preserve">
+    <value>Running as a Region Server</value>
+  </data>
+  <data name="Web_Download_Link_Word" xml:space="preserve">
+    <value>Web Download Link</value>
+  </data>
+  <data name="XEngine_word" xml:space="preserve">
+    <value>XEngine</value>
+  </data>
+  <data name="YEngine_word" xml:space="preserve">
+    <value>YEngine</value>
+  </data>
 </root>
