--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -2707,4 +2707,7 @@
   <data name="Object_Path_and_name" xml:space="preserve">
     <value>Object Path and name</value>
   </data>
+  <data name="Blank256" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Blank256.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
