--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -2710,4 +2710,7 @@
   <data name="Blank256" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Blank256.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Click_To_Load_Here" xml:space="preserve">
+    <value>Click to load the lower left corner of the file into this location.  </value>
+  </data>
 </root>
