--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -251,7 +251,7 @@
     <value>Secret</value>
   </data>
   <data name="Allow_Or_Disallow_Gods_word" xml:space="preserve">
-    <value>Allow or disallow Gods</value>
+    <value>Allow Level-based gods</value>
   </data>
   <data name="Allow_cloud" xml:space="preserve">
     <value>The original Second Life clouds</value>
@@ -543,9 +543,6 @@
   </data>
   <data name="redo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\redo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Allow200" xml:space="preserve">
-    <value>Allow 200+ Level gods</value>
   </data>
   <data name="About_word" xml:space="preserve">
     <value>About</value>
@@ -2712,5 +2709,11 @@
   </data>
   <data name="Click_To_Load_Here" xml:space="preserve">
     <value>Click to load the lower left corner of the file into this location.  </value>
+  </data>
+  <data name="AllowGodsTooltip" xml:space="preserve">
+    <value>If this box is checked In Settings-&gt;Permissions, then any  user with a level  &gt;= 100 in the Web panel can become a God, anywhere.  This can be set for individual regions if the default in Permissions is UN-checked,  and you override it in the region panel with **Allow Gods In This Region**.  This setting has nothing to do with the other two settings.</value>
+  </data>
+  <data name="Region_full_msg" xml:space="preserve">
+    <value>Max number of Avatars + NPCs</value>
   </data>
 </root>
