--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -634,7 +634,7 @@
   <data name="DBName_word" xml:space="preserve">
     <value>Database Name</value>
   </data>
-  <data name="Reion_Removed" xml:space="preserve">
+  <data name="Region_Removed" xml:space="preserve">
     <value>Region has been removed</value>
   </data>
   <data name="Local" xml:space="preserve">
@@ -2754,5 +2754,8 @@
   </data>
   <data name="view1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\view1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Restart_Pending_for_word" xml:space="preserve">
+    <value>Restart Pending for</value>
   </data>
 </root>
