--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -193,8 +193,9 @@
   <data name="Max_Phys" xml:space="preserve">
     <value>You cannot make a physical prim bigger than this</value>
   </data>
-  <data name="Restart_Queued_for_word" xml:space="preserve">
-    <value>Restart Queued for</value>
+  <data name="Restart_Queued_word" xml:space="preserve">
+    <value>Restart Queued</value>
+    <comment>spelling</comment>
   </data>
   <data name="ClicktoInsertPhoto" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ClicktoInsertPhoto.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -2755,7 +2756,8 @@
   <data name="view1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\view1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Restart_Pending_for_word" xml:space="preserve">
-    <value>Restart Pending for</value>
+  <data name="Restart_Pending_word" xml:space="preserve">
+    <value>Restart Pending</value>
+    <comment>spelling</comment>
   </data>
 </root>
